finished last page

--- a/opportunity.html
+++ b/opportunity.html
@@ -17,6 +17,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/style/style.css" />
+    <link rel="stylesheet" href="./assets/style/normalize.css" />
     <title>Document</title>
   </head>
   <body>
@@ -34,8 +35,72 @@
       </div>
     </header>
     <main>
-      <h1>Возможности</h1>
-      <div></div>
+      <div class="main__opport">
+        <h1>Возможности</h1>
+        <div class="main__opport__content">
+          <article class="main__article">
+            <img src="./assets/images/Illustration_4.png" />
+            <h2>БЕЗ ПРОВОДОВ</h2>
+            <p>
+              Шлем работает без проводов. Не нужен ни компьютер, ни внешнее
+              питание, ни большое помещение, чтобы расставить трекеры.
+            </p>
+          </article>
+          <article class="main__article">
+            <img src="./assets/images/Illustration_2.png" />
+            <h2>БЕЗ КОМПЬЮТЕРА</h2>
+            <p>
+              Современным VR-шлемам нужен мощный компьютер, чтобы запускать
+              игры. Наш шлем запускает игры из облака, поэтому просто
+              наслаждайтесь.
+            </p>
+          </article>
+          <article class="main__article">
+            <img src="./assets/images/Illustration_9.png" />
+            <h2>ДО 10 ЧАСОВ РАБОТЫ</h2>
+            <p>
+              Несмотря на компактность и производительность, шлем может работать
+              до 10 часов — даже, если вы играете в самые ресурсоемкие игры.
+            </p>
+          </article>
+          <article class="main__article">
+            <h2>СОТНИ ИГР</h2>
+            <p>
+              Уже сейчас вам доступно более сотни игр: от высокобюджетных
+              ААА-тайтлов до маленьких независимых проектов. Скоро их станет еще
+              больше.
+            </p>
+          </article>
+          <article class="main__article">
+            <h2>ПОЧТИ ДАРОМ</h2>
+            <p>
+              По сравнению с другими VR-шлемами наш стоит гораздо меньше. И вы
+              существенно экономите на мощном компьютере.
+            </p>
+          </article>
+          <form class="main__form">
+            <h2>НОВОСТИ</h2>
+            <input
+              type="email"
+              placeholder="Эл. почта"
+              class="main__article-email"
+            />
+            <button type="submit" class="main__article-button">
+              ПОДПИСАТЬСЯ
+            </button>
+          </form>
+        </div>
+      </div>
     </main>
+    <nav class="footer">
+      <ul class="footer__links">
+        <li class="footer__links__link">
+          <a href="./opportunity.html">Возможности</a>
+        </li>
+        <li class="footer__links__link"><a href="#">Где купить</a></li>
+        <li class="footer__links__link"><a href="#">Доставка</a></li>
+        <li class="footer__links__link"><a href="#">Помощь</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
